--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 body {
   font-family: "Oswald", sans-serif;
   font-family: "PT Sans", sans-serif;
