--- a/views/about.html
+++ b/views/about.html
@@ -44,7 +44,7 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/items">Items</a>
+              <a class="nav-link" href="/items/add">Add Item</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/categories">Categories</a>
