--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,31 +1,37 @@
 <div class="row">
   <aside class="col-md-3">
     <h2>Coming Soon</h2>
-    <p>More updates coming soon. Keep watching!!.</p>
+    <h2>NEW ARRIVALS with EXCITING OFFERS on the way. Stay Connected!</h2>
   </aside>
   <section class="main col-md-9">
     <article>
       <h2>About</h2>
       <p>
-        Hello! My name is TAvneet KAur, and I am passionate about programming
-        and web development. I completed my schooling in India, specializing in
-        the Non-Medical field. After completing my 12th grade, I embarked on a
-        journey to enhance my programming skills. I dedicated myself to learning
-        core Java and obtained a certification after completing a rigorous
-        6-month course.
-      </p>
-      <p>
-        In addition to my studies, I am also determined to acquire the Java
-        Oracle Certification, which holds significant value in the software
-        market. This certification will further strengthen my skills and enhance
-        my career prospects.
-      </p>
-      <p>
-        Looking ahead, I aspire to gain valuable industry experience for 2-3
-        years before embarking on my entrepreneurial journey. With the knowledge
-        and expertise I gather along the way, I am confident that I will be
-        well-prepared to establish my own tech company.
-      </p>
+              Hi! My name is Avneet Kaur. I am currently pursuing Computer Programming Program. I 
+              will graduate this year in December. I am  glad that I have been so far in this 
+              journey. It was definitely not an easy going one. We have to put lots of efforts and 
+              sincerity in order to achieve the goals. 
+          </p>
+          <p>
+              As I am fresher in this field, it was quite difficult for me to grasp all of the 
+              concepts and implement them all together. Though, I am keeping my spirits high as 
+              there is still lots of challenges to come on the way.
+          </p>
+          <p>
+              If I talk about my background, I am from Punjab, India. I passed my high school 
+              in Non Medical stream. Mathematics was and is my favourite sybject. Unfortunately,
+              I am not having it in any of my semester in Diploma.
+          </p>
+          <p>
+              Other than this, I love to solve logical problems and also finding solutions in 
+              terms of coding offcorse. I love to spend quality time alone with nature. I always 
+              like to travel, read books and spread humanity.
+          </p>
+          <p>
+              I am really a practical person. Persnally, I do not like people who cannot sense the 
+              emotions of others with their common sense. I like live freely and do what I want. 
+              I think we should always embrace little moments of our life and follow your passion.
+          </p>
     </article>
   </section>
 </div>
