--- a/views/about.hbs
+++ b/views/about.hbs
@@ -28,8 +28,7 @@
               like to travel, read books and spread humanity.
           </p>
           <p>
-              I am really a practical person. Persnally, I do not like people who cannot sense the 
-              emotions of others with their common sense. I like live freely and do what I want. 
+              I am really a practical person. I like live freely and do what I want. 
               I think we should always embrace little moments of our life and follow your passion.
           </p>
     </article>
